<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Chat Firebase</string>

    <!-- User Edit Hints -->
    <string name="hint_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_message">Type here…</string>

    <!-- User Edit Errors -->
    <string name="error_email">Enter your email</string>
    <string name="error_password">Enter your password</string>
    <string name="error_username">Enter your name</string>
    <string name="error_photo">Select your photo</string>
    <string name="error_confirm_password">Passwords do not match</string>

    <!-- Login Strings -->
    <string name="title_login">Login</string>
    <string name="bt_login">Log In</string>
    <string name="lost_password">New password</string>
    <string name="login_divider" translatable="false">\ |\ </string>
    <string name="new_account">New account</string>
    <string name="success_login">Successfully logged in</string>

    <!-- Register Strings -->
    <string name="title_register">New Account</string>
    <string name="bt_register">Register</string>
    <string name="have_account">I already have an account!</string>
    <string name="bt_photo">Photo</string>
    <string name="loading_register">Creating a new account</string>
    <string name="loading_message">Wait…</string>
    <string name="success_register">Account successfully created</string>

    <!-- Home Strings -->
    <string name="tab_chats">Chats</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_calls">Calls</string>
    <string name="bt_logout">Log out</string>
    <string name="user_offline">Offline</string>
    <string name="user_away">Away</string>
    <string name="user_online">Online</string>

    <!-- Call Strings -->
    <string name="call_title">Voice Call</string>
    <string name="on_call_progressing" tools:ignore="TypographyEllipsis">Calling...</string>
    <string name="on_call_established">Call established</string>
    <string name="call_speaker_enabled">Speaker enabled</string>
    <string name="call_speaker_disabled">Speaker disabled</string>
    <string name="call_denied">Call denied</string>
    <string name="call_canceled">Call canceled</string>
    <string name="call_hang_up">Call ended</string>
    <string name="call_timeout">Timeout</string>
    <string name="call_no_answer">No answer</string>
    <string name="call_notification_title">Incoming call</string>
    <string name="call_notification_text">tap to see</string>

    <!-- Permissions Strings -->
    <string name="permission_microphone_phone">Phone and microphone permissions are required to make and receive calls</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_ignore">Ignore</string>

    <!-- Failure Strings -->
    <string name="failure_select_photo">Failed to select photo</string>
    <string name="failure_create_account">Failed to create account</string>
    <string name="failure_user">Failed to load user</string>
    <string name="failure_user_profile">Failed to load user profile</string>
    <string name="failure_chats">Failed to load chats</string>
    <string name="failure_calls">Failed to load calls</string>
    <string name="failure_contact">Failed to load contact</string>
    <string name="failure_messages">Failed to load messages</string>
    <string name="failure_message">Failed to send message</string>
    <string name="failure_call">Failed to register call</string>
    <string name="failure_sinch_service">Call service failure</string>
    <string name="failure_call_service">Failed to connect to call service</string>

    <!-- Intent Extras -->
    <string name="user_id" translatable="false">uId</string>
    <string name="user_name" translatable="false">uName</string>
    <string name="user_profile_url" translatable="false">uProfileUrl</string>
    <string name="contact_id" translatable="false">cId</string>
    <string name="contact_name" translatable="false">cName</string>
    <string name="contact_profile_url" translatable="false">cProfileUrl</string>

    <!-- Fields -->
    <string name="name" translatable="false">name</string>
    <string name="profile_url" translatable="false">profileUrl</string>
    <string name="connection_status" translatable="false">connectionStatus</string>
    <string name="timestamp" translatable="false">timestamp</string>
    <string name="read" translatable="false">read</string>
    <string name="last_message" translatable="false">lastMessage</string>
    <string name="last_message_timestamp" translatable="false">lastMessage.timestamp</string>
    <string name="last_message_read" translatable="false">lastMessage.read</string>
    <string name="viewed" translatable="false">viewed</string>
    <string name="unreadMessages" translatable="false">unreadMessages</string>

    <!-- Firestore Collections -->
    <string name="collection_talks" translatable="false">talks</string>
    <string name="collection_talks_chats" translatable="false">chats</string>
    <string name="collection_talks_calls" translatable="false">calls</string>

    <!-- Firebase Database References -->
    <string name="database_users" translatable="false">users</string>

    <!-- Firebase Storage References -->
    <string name="storage_path_photos" translatable="false">images/photos/</string>

    <!-- Channel Strings -->
    <string name="channel_id" translatable="false">SinchChannel</string>
    <string name="channel_name" translatable="false">Sinch Channel</string>
    <string name="channel_description" translatable="false">Call Notifications</string>

    <!-- Sinch Credentials -->
    <string name="sinch_hostname" translatable="false">clientapi.sinch.com</string>
    <string name="sinch_key" tools:ignore="TypographyDashes" translatable="false">8c26ee5f-5ed7-4f00-9720-2da9bbfb127c</string>
    <string name="sinch_secret" translatable="false">dxYgmyu/XE+jGNBoAsmJtA==</string>

    <string name="max_badge_number" translatable="false">+99</string>
</resources>