<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/fundo">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_register"
        android:textColor="@color/corSecundaria"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtRemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/corSecundaria"
        android:textColorHint="@color/corSecundaria"
        android:textColorHighlight="@color/corSecundaria"
        android:textColorLink="@color/corSecundaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRname"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="100dp"
        android:background="@color/corDetalhes"
        android:text="@string/new_register"
        android:textColor="@color/corSecundaria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtRname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/corSecundaria"
        android:textColor="@color/corSecundaria"
        android:textColorHighlight="@color/corSecundaria"
        android:textColorLink="@color/corSecundaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPhoto"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtRpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPersonName"
        android:textColorHint="@color/corSecundaria"
        android:textColor="@color/corSecundaria"
        android:textColorHighlight="@color/corSecundaria"
        android:textColorLink="@color/corSecundaria"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRemail"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtRconfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPersonName"
        android:textColorHint="@color/corSecundaria"
        android:textColor="@color/corSecundaria"
        android:textColorHighlight="@color/corSecundaria"
        android:textColorLink="@color/corSecundaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRpassword"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/btHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/have_account"
        android:textColor="@color/corSecundaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

    <Button
        android:id="@+id/btPhoto"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bt_foto_circular"
        android:text="@string/bt_photo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgPhoto"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/corSecundaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

</androidx.constraintlayout.widget.ConstraintLayout>